--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
     "devDependencies": {
         "@hotwired/stimulus": "^3.0.0",
+        "@popperjs/core": "^2.11.4",
         "@symfony/stimulus-bridge": "^3.0.0",
         "@symfony/webpack-encore": "^1.7.0",
+        "bootstrap": "^5.1.3",
         "core-js": "^3.0.0",
+        "jQuery": "^1.7.4",
+        "jquery": "^3.6.0",
+        "node": "^17.7.1",
         "regenerator-runtime": "^0.13.2",
         "webpack-notifier": "^1.6.0"
     },
